[gd_scene load_steps=8 format=3 uid="uid://cudqwshkh8m4f"]

[ext_resource type="Texture2D" uid="uid://cwyn87ul4csiy" path="res://media/images/background.jpg" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://wejyk2oqwpsp" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://eaepu2uw71ux" path="res://media/fonts/GrapeSoda.ttf" id="2_fu7sn"]
[ext_resource type="PackedScene" uid="uid://cs6ng4najsxad" path="res://fade_transition.tscn" id="2_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("1_7vrkn")
modulate_color = Color(0.64, 0.64, 0.64, 1)

[sub_resource type="Theme" id="Theme_rhts7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.89, 0.89, 0.89, 0)
border_color = Color(0.6, 0.5949, 0.582, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -122.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 30

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rhts7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rhts7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
text = "Quit"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rhts7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxFlat_06t4h")
text = "Options"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.819
anchor_top = 0.153
anchor_right = 0.819
anchor_bottom = 0.153
offset_left = -642.488
offset_top = 428.856
offset_right = -69.4881
offset_bottom = 544.856
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 116
text = "Loop Robber"

[node name="Transition" parent="." instance=ExtResource("2_jix8l")]
visible = false
layout_mode = 1

[node name="FadeTimer" type="Timer" parent="Transition"]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="timeout" from="Transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
